syntax = "proto3";
package dom.api;

message PaymentCallbackRequest {
  string transaction_id = 1;
  float amount = 2;
  int32 status = 3;
}

message PaymentCallbackResponse {
  string message = 1;
}

service DOMService {
  // create payment
  rpc PaymentCallback(PaymentCallbackRequest) returns (PaymentCallbackResponse);
}